# terminal-audio

./: CMakeLists.txt  README.md
src/: audio.cpp  audio.h  config.h  frontend.cpp  frontend.h  graph.cpp  graph.h  main.cpp  partition.h  partition.tpp  playbackinfo.h  queue.h  queue.tpp  utils.cpp  utils.h
